tests/conformance/errors/excess-and-missing-props.ur
qisim Shakhs = { naam: lafz, umar: adad };
rakho a: Shakhs = { naam: "ali", umar: 20, faltu: sach };
rakho b: Shakhs = { naam: "sara" };
